--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -49,7 +49,7 @@ jobs:
         run: npm link matterbridge
 
       - name: Run tests
-        run: npm run test:coverage -- --forceExit
+        run: npm run test:coverage
 
       - name: Upload results to Codecov
         uses: codecov/codecov-action@v5
