--- a/.github/workflows/publish-matterbridge-plugin.yml
+++ b/.github/workflows/publish-matterbridge-plugin.yml
@@ -29,6 +29,9 @@ jobs:
       - name: Verify Node.js version
         run: node -v
 
+      - name: Update npm for Trusted Publishing
+        run: npm install -g npm@latest
+
       - name: Verify Npm version
         run: npm -v
 
